--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <header class="main-header">
             <nav class="nav main-nav">
                 <ul>
-                    <li><a href="index.php">HOME</a></li>
-                    <li><a href="about.php">ABOUT</a></li>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="about.html">ABOUT</a></li>
                 </ul>
             </nav>
             <h1 class="judul-utama">DISCOVER INDONESIA!</h1>
@@ -33,9 +33,9 @@
                     <td>PADANG</td>
                 </tr>
                 <tr>
-                    <td><a href="bali.php"><img src="Images/home_bali.jpg"  alt="Image 1" class="zoomable"></a></td>
-                    <td><a href="jakarta.php"><img src="Images/home_jakarta.jpg" alt="Image 2"class="zoomable"></a></td>
-                    <td><a href="padang.php"><img src="Images/home_padang.webp" alt="Image 3"class="zoomable"></a></td>
+                    <td><a href="bali.html"><img src="Images/home_bali.jpg"  alt="Image 1" class="zoomable"></a></td>
+                    <td><a href="jakarta.html"><img src="Images/home_jakarta.jpg" alt="Image 2"class="zoomable"></a></td>
+                    <td><a href="padang.html"><img src="Images/home_padang.webp" alt="Image 3"class="zoomable"></a></td>
                 </tr>
                 <tr>
                     <td><br></td>
@@ -46,9 +46,9 @@
                     <td>MALUKU</td>
                 </tr>
                 <tr>
-                    <td><a href="sumatraUtara.php"><img src="Images/home_sumatraUtara.jpg" alt="Image 4"class="zoomable"></a></td>
-                    <td><a href="yogyakarta.php"><img src="Images/home_yogyakarta.webp" alt="Image 5"class="zoomable"></a></td>
-                    <td><a href="maluku.php"><img src="Images/home_maluku.jpg" alt="Image 6"class="zoomable"></a></td>
+                    <td><a href="sumatraUtara.html"><img src="Images/home_sumatraUtara.jpg" alt="Image 4"class="zoomable"></a></td>
+                    <td><a href="yogyakarta.html"><img src="Images/home_yogyakarta.webp" alt="Image 5"class="zoomable"></a></td>
+                    <td><a href="maluku.html"><img src="Images/home_maluku.jpg" alt="Image 6"class="zoomable"></a></td>
                 </tr>
             </table>
         </div>
